--- a/_publications/2024-01-20-L2G.md
+++ b/_publications/2024-01-20-L2G.md
@@ -6,5 +6,7 @@ excerpt: '**Shaozhe Liu**, Leike An, Xinliang Zhou, Xiaojun Ning, and Ziyu Jia*'
 date: 2024-01-20
 venue: 'IEEE Transactions on Cybernetics'
 status: 'under review'
-paperurl: 'http://academicpages.github.io/files/paper3.pdf'
+
+[comment]: <> (paperurl: 'http://academicpages.github.io/files/paper3.pdf')
+
 ---
