--- a/_publications/2024-01-20-L2G.md
+++ b/_publications/2024-01-20-L2G.md
@@ -6,7 +6,6 @@ excerpt: '**Shaozhe Liu**, Leike An, Xinliang Zhou, Xiaojun Ning, and Ziyu Jia*'
 date: 2024-01-20
 venue: 'IEEE Transactions on Cybernetics'
 status: 'under review'
-
-[comment]: <> (paperurl: 'http://academicpages.github.io/files/paper3.pdf')
-
 ---
+
+<div style="display:none">paperurl: 'http://academicpages.github.io/files/paper3.pdf'</div>
