--- a/_publications/2024-01-20-L2G.md
+++ b/_publications/2024-01-20-L2G.md
@@ -2,7 +2,7 @@
 title: "Learning Local to Global Spatial-Temporal Representation for Motor Imagery Classification"
 collection: 'publications'
 permalink: /publication/2024-01-20-L2G
-excerpt: '**Shaozhe Liu**, Leike An, Xinliang Zhou, Xiaojun Ning, and Ziyu Jia*'
+excerpt: '**Shaozhe Liu**; Leike An; Xinliang Zhou; Xiaojun Ning; and Ziyu Jia*'
 date: 2024-01-20
 venue: 'IEEE Transactions on Cybernetics'
 status: 'under review'
