--- a/_publications/2023-10-01-STDG.md
+++ b/_publications/2023-10-01-STDG.md
@@ -2,7 +2,7 @@
 title: "A Spatial-Temporal Transformer based on Domain Generalization for Motor Imagery Classification"
 collection: publications
 permalink: /publication/2023-10-01-STDG
-excerpt: '**Shaozhe Liu**, Leike An, Chi Zhang, and Ziyu Jia*'
+excerpt: '**Shaozhe Liu**; Leike An; Chi Zhang; and Ziyu Jia*'
 date: 2023-10-01
 venue: 'The 2023 IEEE International Conference on Systems, Man, and Cybernetics(<span style=" color: red;">SMC, CCF-C</span>)'
 ---
