--- a/_publications/2024-01-20-L2G.md
+++ b/_publications/2024-01-20-L2G.md
@@ -1,11 +1,11 @@
 ---
 title: "Learning Local to Global Spatial-Temporal Representation for Motor Imagery Classification"
-collection: 'publications'
+collection: 'under review'
 permalink: /publication/2024-01-20-L2G
 excerpt: '**Shaozhe Liu**; Leike An; Xinliang Zhou; Xiaojun Ning; and Ziyu Jia*'
-date: 2024-01-20
-venue: 'IEEE Transactions on Cybernetics'
+date: 2024-05-20
+venue: 'IEEE Transactions on Systems, Man, and Cybernetics: Systems'
 status: 'under review'
 ---
 
-<div style="display:none">paperurl: 'http://academicpages.github.io/files/paper3.pdf'</div>
+<div style="display:none">paperurl: 'http://academicpages.github.io/files/Learning_Local-to-Global_Spatial-Temporal_Representation_for_Motor_Imagery_Classification.pdf'</div>
