--- a/_publications/2024-01-20-L2G.md
+++ b/_publications/2024-01-20-L2G.md
@@ -1,6 +1,6 @@
 ---
 title: "Learning Local to Global Spatial-Temporal Representation for Motor Imagery Classification"
-collection: 'under review'
+collection: review
 permalink: /publication/2024-01-20-L2G
 excerpt: '**Shaozhe Liu**; Leike An; Xinliang Zhou; Xiaojun Ning; and Ziyu Jia*'
 date: 2024-05-20
